<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">doIT</string>
	<string name="about">doIt is a FLOSS application </string>
	<string name="help">&lt;h4&gt;Navigation&lt;/h4&gt;The main view consists of two tabs, tasks and lists.
	 By pressing the menu button you can bring up a menu to navigate to special functionality.
	&lt;h4&gt;Tasks&lt;/h4&gt;From the task view you can quickly create tasks by entering a name in the bottom field
	 and pressing ´´´´´´´´´´´Add´´´´´´´´´´´´´´´.
	 &lt;br&gt;&lt;br&gt;Pressing ´New...´ will take you to the advanced task adding view where you have more
	  options, such as priority.&lt;br&gt;&lt;br&gt;
	  
	  Longpressing a task gives you options to delete, edit and complete a task.
	  While in the task tab you can also, by pressing the menu button and selecting sort, choose to sort tasks.
	&lt;h4&gt;Lists&lt;/h4&gt;
	 In list view you can add task lists with the bottom edit bar. Press a list to go into it and make it active.
	  Longpress a list to be able to edit it and delete it (which will delete all related tasks)</string>
	<string name="quick_add_hint">New task..</string>
	<string name="empty_list">This list is empty.</string>
	<string name="enter_name">Name (required):</string>
	<string name="enter_description">Description:</string>
	<string name="enter_name_hint">&lt;Enter Name&gt;</string>
	<string name="enter_description_hint">&lt;Enter Description&gt;</string>

	<string name="interval_prompt">
	</string>
	<string-array name="interval_array">
		<item>all time</item>
		<item>last 30 days</item>
		<item>last 7 days</item>
		<item>today</item>
	</string-array>
	<string name="task_sorter_header">Choose sorting order:</string>
	<string name="primary_spinner_desc">Primary:</string>
	<string name="secondary_spinner_desc">Secondary:</string>
	<string name="tertiary_spinner_desc">Tertiary:</string>
	<string name="cancel_button">Cancel</string>
	<string name="sort_button">Sort</string>

	<string name="sorting_prompt">
	</string>
	<string-array name="sorting_array">
		<item>Due date (soon-later)</item>
		<item>Due date (later-soon)</item>
		<item>Name (A-Z)</item>
		<item>Name (Z-A)</item>
		<item>Priority (1-5)</item>
		<item>Priority (5-1)</item>
	</string-array>
	
</resources>